Salesforce/force-app/main/default/objects/Record_Types__mdt/Record_Types__mdt.object-meta.xml
<CustomObject>
    <description>Used for all record type deploys from Sandbox into LIVE.</description>
    <label>Object Record Types</label>
    <pluralLabel>Object_Record_Types</pluralLabel>
</CustomObject>