Salesforce/force-app/main/default/objects/Record_Types__mdt/fields/New_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Record_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used for identifying new record types from a Sandbox.</inlineHelpText>
    <label>New Record Type</label>
    <type>Checkbox</type>
</CustomField>