Salesforce/force-app/main/default/objects/Record_Types__mdt/fields/Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Record Type ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>