Salesforce/force-app/main/default/objects/Record_Types__mdt/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <label>Record Type Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>